@@ -1,0 +1,32 @@
+# -*-python-*-
+# 
+#  Copyright (C) 2002 Jacob Smullyan <smulloni@smullyan.org>
+#  
+#      This program is free software; you can redistribute it and/or modify
+#      it under the terms of the GNU General Public License as published by
+#      the Free Software Foundation; either version 2 of the License, or
+#      (at your option) any later version.
+#  
+#      This program is distributed in the hope that it will be useful,
+#      but WITHOUT ANY WARRANTY; without even the implied warranty of
+#      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#      GNU General Public License for more details.
+#  
+#      You should have received a copy of the GNU General Public License
+#      along with this program; if not, write to the Free Software
+#      Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111, USA.
+#   
+########################################################################
+
+
+SKUNK_ROOT =               '@prefix@'
+DEFAULT_CONFIG_FILE_NAME = '@sysconfdir@/sw.conf'
+DEFAULT_MIME_TYPES_FILE_NAME = '@sysconfdir@/mime.types'
+SERVICES_ROOT =            '@libdir@/Services'
+PYLIBS_ROOT =              '@libdir@/pylibs'
+DEFAULT_ACCESS_LOG =       '@LOGDIR@/access.log'		
+DEFAULT_ERROR_LOG =        '@LOGDIR@/error.log'
+DEFAULT_REGULAR_LOG =      '@LOGDIR@/sw.log'
+DEFAULT_DEBUG_LOG =        '@LOGDIR@/debug.log'
+DEFAULT_PID_FILE =         '@localstatedir@/run/sw.pid'
+SKUNKWEB_VERSION =         '@SW_VERSION@'
